--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "whatwg-fetch": "^3.6.19"
   }
 }
